# writeups

./: .gitmodules  README.md
bluewater_ctf/great_escape_user_unsolved/: Dockerfile  con.sh  flag.txt  run-docker.sh
buckeyectf/no_handouts/: chall  handout.py
buckeyectf/sailing_the_c/: chall  chall.c  king.py
buckeyectf/spaceman/: chain  rocketman.py  stack_pivot_gadgets
buckeyectf_2024/xnor/: xnor.py
corctf24/format_string_unsolved/: form.py
csaw/vip/: flag.txt  limo.py
cse4830/arm/: .gdb_history
cse4850/: README.md  final.py
cse4850/allocate/: alloc.py
cse4850/heap/: house.py
cse4850/set2_advanced-rop/: advanced_rop.org  brop1.py  brop2.py
cse4850/tcache/: tcache.py
cse4850/unlink/: README.md  unlink.py
dice23/bop/: .gdb_history  bop-ascii.cast
dice23/parallelism/: parallelism.bndb  parallelism_patch  solve_par.py
dice_2023/bop/: bopit.py
dicequals/babytalk/: .gdb_history  1  Dockerfile  baby  flag.txt  solve.py  talk.py
dicequals_2024/babytalk/: talk.py
dicequals_2025/debugapwner/: Dockerfile  base  exp.elf  midget.py
dicequals_2025/dicecap/: elfbin-extract-pcap.elf.txt
dicequals_2025/locked/: Dockerfile
dicequals_2025/locked_unsolved/: locked_room.c
idek/typop/: typo.py
lactf24/: glottem
nahamcon/: cache.py
spaceheroes_2024/: ranger.py
sunshine/: MagicTheGatheRIIng.bndb  bird.py  ctf-simulator.bndb  fen.bndb
sunshine22/: .gdb_history  ctf.py  sunshinectf2022_snake.bndb
sunshine_2022/: gdbscript
sunshine_2023/: house_of_sus
unsolved/wasmwbw/wasm_host/: Cargo.toml
unsolved/wasmwbw/wasm_host/src/: main.rs
(+354 files in other folders)
