[package]
name = "wasm_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
wasmtime = "26.0.1"
wasmtime-wasi = "26.0.1"
cranelift-codegen = "0.113.1"
cranelift-codegen-meta = "0.113.1"
cranelift-codegen-shared = "0.113.1"
